added event name and code

--- a/create/main2.html
+++ b/create/main2.html
@@ -111,8 +111,13 @@
                         </div>
                         <div class="quiz-create create show-select">
                             <div class="Quiz-internal show-action">
+                                <div class="event-name-and-code create-section">
+                                    <p class="current-event-name"></p>
+                                    <p class="current-event-code"></p>
+                                </div>
                                 <form action="" method="post" class="quiz-create-container show-action"
                                     id="question_form">
+
                                     <label for="question_name">Question</label>
                                     <input type="text" id="question_name" class="main-input"
                                         placeholder="Enter Question">
@@ -199,6 +204,10 @@
                             </div>
                             <div class="Quiz-name">
                                 <form action="" method="post" class="name-div">
+                                    <div class="event-name-and-code">
+                                        <p class="current-event-name"></p>
+                                        <p class="current-event-code"></p>
+                                    </div>
                                     <label for="Quiz_name">Title</label>
                                     <input type="text" id="Quiz_name" class="main-input" placeholder="Enter Quiz Name">
                                     <button class="main-button action-btn Quiz">Make quiz</button>
@@ -225,6 +234,10 @@
                         </div>
                         <div class="poll-create create show-select">
                             <div class="Poll-internal show-action">
+                                <div class="event-name-and-code create-section">
+                                    <p class="current-event-name"></p>
+                                    <p class="current-event-code"></p>
+                                </div>
                                 <form action="" method="post" class="poll-create-container show-action" id="poll_form">
                                     <label for="poll_name">Question</label>
                                     <input type="text" id="poll_name" class="main-input" placeholder="Enter Question">
@@ -307,6 +320,10 @@
                                 </div>
                             </div>
                             <div class="Poll-name">
+                                <div class="event-name-and-code">
+                                    <p class="current-event-name"></p>
+                                    <p class="current-event-code"></p>
+                                </div>
                                 <form action="" method="post" class="name-div">
                                     <label for="Poll_name">Title</label>
                                     <input type="text" id="Poll_name" class="main-input" placeholder="Enter Poll Name">
@@ -341,6 +358,10 @@
                         </div>
                         <div class="feedback-create create show-select">
                             <div action="" method="post" class="Feedback-internal show-action">
+                                <div class="event-name-and-code create-section">
+                                    <p class="current-event-name"></p>
+                                    <p class="current-event-code"></p>
+                                </div>
                                 <form action="" method="post" class="feedback-create-container show-action"
                                     id="feedback_form">
                                     <label for="feedback_name">Question</label>
@@ -389,6 +410,10 @@
                                 </div>
                             </div>
                             <div class="Feedback-name">
+                                <div class="event-name-and-code">
+                                    <p class="current-event-name"></p>
+                                    <p class="current-event-code"></p>
+                                </div>
                                 <form action="" method="post" class="name-div">
                                     <label for="Feedback_name">Title</label>
                                     <input type="text" id="Feedback_name" class="main-input"
