--- a/create/main2.html
+++ b/create/main2.html
@@ -111,13 +111,13 @@
                         </div>
                         <div class="quiz-create create show-select">
                             <div class="Quiz-internal show-action">
-                                <div class="event-name-and-code create-section">
-                                    <p class="current-event-name"></p>
-                                    <p class="current-event-code"></p>
-                                </div>
+                                
                                 <form action="" method="post" class="quiz-create-container show-action"
                                     id="question_form">
-
+                                    <div class="event-name-and-code create-section grid-area-apply">
+                                        <p class="current-event-name"></p>
+                                        <p class="current-event-code"></p>
+                                    </div>
                                     <label for="question_name">Question</label>
                                     <input type="text" id="question_name" class="main-input"
                                         placeholder="Enter Question">
@@ -204,7 +204,7 @@
                             </div>
                             <div class="Quiz-name">
                                 <form action="" method="post" class="name-div">
-                                    <div class="event-name-and-code">
+                                    <div class="event-name-and-code grid-area-apply">
                                         <p class="current-event-name"></p>
                                         <p class="current-event-code"></p>
                                     </div>
@@ -234,11 +234,11 @@
                         </div>
                         <div class="poll-create create show-select">
                             <div class="Poll-internal show-action">
-                                <div class="event-name-and-code create-section">
-                                    <p class="current-event-name"></p>
-                                    <p class="current-event-code"></p>
-                                </div>
                                 <form action="" method="post" class="poll-create-container show-action" id="poll_form">
+                                    <div class="event-name-and-code create-section grid-area-apply">
+                                        <p class="current-event-name"></p>
+                                        <p class="current-event-code"></p>
+                                    </div>
                                     <label for="poll_name">Question</label>
                                     <input type="text" id="poll_name" class="main-input" placeholder="Enter Question">
                                     <label for="poll_options">Options</label>
@@ -320,11 +320,11 @@
                                 </div>
                             </div>
                             <div class="Poll-name">
-                                <div class="event-name-and-code">
-                                    <p class="current-event-name"></p>
-                                    <p class="current-event-code"></p>
-                                </div>
                                 <form action="" method="post" class="name-div">
+                                    <div class="event-name-and-code grid-area-apply">
+                                        <p class="current-event-name"></p>
+                                        <p class="current-event-code"></p>
+                                    </div>
                                     <label for="Poll_name">Title</label>
                                     <input type="text" id="Poll_name" class="main-input" placeholder="Enter Poll Name">
                                     <button class="main-button action-btn Poll">Make Poll</button>
@@ -358,12 +358,12 @@
                         </div>
                         <div class="feedback-create create show-select">
                             <div action="" method="post" class="Feedback-internal show-action">
-                                <div class="event-name-and-code create-section">
-                                    <p class="current-event-name"></p>
-                                    <p class="current-event-code"></p>
-                                </div>
                                 <form action="" method="post" class="feedback-create-container show-action"
                                     id="feedback_form">
+                                    <div class="event-name-and-code create-section grid-area-apply">
+                                        <p class="current-event-name"></p>
+                                        <p class="current-event-code"></p>
+                                    </div>
                                     <label for="feedback_name">Question</label>
                                     <textarea rows="3" type="text" id="feedback_name" class="main-input"
                                         placeholder="Enter Feedback Question"></textarea>
@@ -410,11 +410,12 @@
                                 </div>
                             </div>
                             <div class="Feedback-name">
-                                <div class="event-name-and-code">
-                                    <p class="current-event-name"></p>
-                                    <p class="current-event-code"></p>
-                                </div>
+                                
                                 <form action="" method="post" class="name-div">
+                                    <div class="event-name-and-code grid-area-apply">
+                                        <p class="current-event-name"></p>
+                                        <p class="current-event-code"></p>
+                                    </div>
                                     <label for="Feedback_name">Title</label>
                                     <input type="text" id="Feedback_name" class="main-input"
                                         placeholder="Enter Feedback Name">
