idk what i changed, idc to check

--- a/participate/action.html
+++ b/participate/action.html
@@ -192,6 +192,7 @@
 
         .feedback_info {
             width: 100%;
+            border: solid 2px var(--main-color);
         }
 
         @media only screen and (max-width: 600px) {
@@ -260,7 +261,7 @@
                 <div class="options-div">
                     <textarea class="feedback_info not-show" name="" id="" cols="" rows="15"
                         placeholder="Enter your feedback"
-                        style=" background: lightblue; border-radius: 5px; padding: 10px; outline: none;"></textarea>
+                        style=" background: white; border-radius: 5px; padding: 10px; outline: none;"></textarea>
                 </div>
                 <button class="main-button submit not-show">Submit Feedback</button>
             </div>
