--- a/create/main2.html
+++ b/create/main2.html
@@ -32,7 +32,7 @@
         </div>
         <div class="main">
             <div class="nav-control mobile-grid">
-                <img src="../img/ham.svg" alt="" class="ham">
+                <i class="material-icons ham">menu</i>
                 <p class="nav-text">Home</p>
             </div>
             <div class="main-container">
