--- a/participate/action.html
+++ b/participate/action.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -66,12 +67,10 @@
             overflow: auto;
             text-align: center;
         }
-
-        .container {
+        .container{
             position: relative;
             display: none;
         }
-
         .main-button {
             padding: 16px 40px;
             border-radius: 5px;
@@ -151,10 +150,10 @@
             display: none;
         }
 
-        /* .material-icons {
+        .material-icons {
             font-size: 6rem;
             color: var(--main-color);
-        } */
+        }
 
         .text {
             position: relative;
@@ -180,10 +179,9 @@
             display: none;
         }
 
-        .show {
+        .show{
             display: block;
         }
-
         ::-webkit-scrollbar {
             background-color: #fff;
             width: 10px;
@@ -298,7 +296,7 @@
                     <button class="main-button submit not-show">Submit Feedback</button>
                 </div>
                 <div class="next-question-wait">
-                    <img src="../img/check.svg" alt="">
+                    <i class="material-icons large">near_me</i>
                     <h1>Wait until admin sets up the next question</h1>
                 </div>
             </div>
@@ -525,10 +523,8 @@
                 socket.emit("option", option_id);
                 sessionStorage.setItem("Answered", "true");
                 sessionStorage.setItem("opt_id", option_id);
-                setTimeout(() => {
-                    container.classList.remove("show");
-                    waitDiv.classList.add("show")
-                }, 2000)
+                container.classList.remove("show");
+                waitDiv.classList.add("show")
             }
         }
         //Rendering the quiz
