favicon and title

--- a/participate/action.html
+++ b/participate/action.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="../img/favicon.png">
+    <title>Hermes | Participate</title>
     <style>
         :root {
             --main-color: #2784FB;
@@ -518,7 +520,7 @@
                 setTimeout(() => {
                     container.classList.remove("show");
                     waitDiv.classList.add("show")
-                }, 2000)
+                }, 3000)
             }
         }
         //Rendering the quiz
