--- a/create/main2.html
+++ b/create/main2.html
@@ -7,7 +7,8 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="./css/main2.css">
-    <title>Document</title>
+    <link rel="icon" type="image/png" href="../img/favicon.png">
+    <title>Hermes | Admin</title>
 </head>
 
 <body>
