--- a/participate/event2.html
+++ b/participate/event2.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="../img/favicon.png">
+    <title>Hermes | Join Event</title>
     <style>
         :root {
             --main-color: #2784FB;
