--- a/participate/action.html
+++ b/participate/action.html
@@ -21,7 +21,9 @@
             padding: 0;
             font-family: 'Montserrat', sans-serif;
         }
-
+        .logo-color{
+            fill: var(--main-color)
+        }
         body {
             position: relative;
         }
@@ -31,7 +33,7 @@
             height: 100vh;
             width: 100vw;
             display: grid;
-            grid-template-rows: 10% 90%;
+            grid-template-rows: 12% 88%;
         }
 
         .header {
@@ -42,7 +44,7 @@
             align-items: center;
         }
 
-        .header>img {
+        .header>svg {
             position: relative;
             margin-left: 20px;
         }
@@ -275,7 +277,40 @@
 <body>
     <main>
         <div class="header">
-            <img src="../img/logo.svg" alt="">
+            <svg xmlns="http://www.w3.org/2000/svg" height="70.271" viewBox="0 0 189.622 70.271">
+                <g id="Group_354" data-name="Group 354" transform="translate(-89.172 -74)">
+                    <g id="Group_349" data-name="Group 349" transform="translate(89.172 74)" class="logo-color">
+                        <path id="Path_132" data-name="Path 132"
+                            d="M711.584,398.894l-7.2-.9a1.6,1.6,0,0,0-1.681.976c-2.682,6.464-16.158,38.6-19.963,41.089-.127.083-.253.164-.373.255-1.338,1.023-8.456,6.362-11.28,6.362-1.431,0-1.312.746-.763,1.553a4.63,4.63,0,0,0,3.837,2H687.5a5.91,5.91,0,0,0,4.018-1.576l14.021-13a24.421,24.421,0,0,1,8.525-5.137l7.624-2.672a2.016,2.016,0,0,0,1.349-1.9v-4.558a5.034,5.034,0,0,0-.857-2.81l-3.426-5.093a4.766,4.766,0,0,1-.784-3.168l.182-1.7a.335.335,0,0,0-.453-.348l-4.316,1.65-1.066-10.262A.847.847,0,0,0,711.584,398.894Z"
+                            transform="translate(-669.938 -379.955)" />
+                        <g id="Group_348" data-name="Group 348" transform="translate(43.733 0)">
+                            <path id="Path_133" data-name="Path 133"
+                                d="M997.171,281.677h0a13.762,13.762,0,0,1,8.772-5.966L1028.992,271h0a14.264,14.264,0,0,1-10.006,6.987Z"
+                                transform="translate(-994.45 -271)" />
+                            <path id="Path_134" data-name="Path 134"
+                                d="M978.122,344.39,978,347.2l21.537-3.9a7.614,7.614,0,0,0,6.1-5.939h0l-25.451,4.663A2.516,2.516,0,0,0,978.122,344.39Z"
+                                transform="translate(-978 -327.94)" />
+                            <path id="Path_135" data-name="Path 135"
+                                d="M979.475,408.117l.235,2.355a1.69,1.69,0,0,0,1.993,1.493l13.555-2.542a5.8,5.8,0,0,0,4.733-5.7h0Z"
+                                transform="translate(-979.266 -384.88)" />
+                        </g>
+                        <circle id="Ellipse_16" data-name="Ellipse 16" cx="3.194" cy="3.194" r="3.194"
+                            transform="translate(40.326 24.985)" fill="#fff" />
+                    </g>
+                    <rect id="Rectangle_41" data-name="Rectangle 41" width="13.82" height="3.339"
+                        transform="translate(103.975 130.317) rotate(33.813)" fill="#fff" />
+                    <rect id="Rectangle_42" data-name="Rectangle 42" width="13.82" height="3.185"
+                        transform="translate(117.543 97.793) rotate(10.519)" fill="#fff" />
+                    <rect id="Rectangle_43" data-name="Rectangle 43" width="28.418" height="3.747"
+                        transform="translate(109.766 113.059) rotate(23.201)" fill="#fff" />
+                    <rect id="Rectangle_44" data-name="Rectangle 44" width="28.418" height="3.043"
+                        transform="translate(133.403 102.119) rotate(84.846)" fill="#fff" />
+                    <text id="Hermes" transform="translate(155.794 136)" font-size="30"
+                        font-family="Montserrat-Bold, Montserrat" font-weight="700">
+                        <tspan x="0" y="0">Hermes</tspan>
+                    </text>
+                </g>
+            </svg>
         </div>
         <div class="main">
             <div class="main-container">
