--- a/participate/action.html
+++ b/participate/action.html
@@ -21,9 +21,11 @@
             padding: 0;
             font-family: 'Montserrat', sans-serif;
         }
-        .logo-color{
+
+        .logo-color {
             fill: var(--main-color)
         }
+
         body {
             position: relative;
         }
@@ -270,6 +272,10 @@
             .not-show {
                 display: none;
             }
+        }
+
+        button::-moz-focus-inner {
+            border: 0;
         }
     </style>
 </head>
