--- a/participate/event2.html
+++ b/participate/event2.html
@@ -20,9 +20,11 @@
             padding: 0;
             font-family: 'Montserrat', sans-serif;
         }
-        .logo-color{
+
+        .logo-color {
             fill: var(--main-color)
         }
+
         body {
             position: relative;
         }
@@ -141,6 +143,10 @@
                 margin-bottom: 30px;
                 min-width: 0;
             }
+        }
+
+        button::-moz-focus-inner {
+            border: 0;
         }
     </style>
     <title>Document</title>
